--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         <ul class="menu">
             <li><a href="welcome.html">Welcome and Introduction</a></li>
             <li><a href="before-open-day.html">Before the Open Day (Checklist and Tips)</a></li>
-            <li><a href="how-to-get.html">How to Get to St Mary’s</a></li>
-            <li><a href="campus-maps.html">Campus Maps</a></li>
-            <li><a href="arrival-points.html">Arrival Points</a></li>
-            <li><a href="book-tickets.html">Book Tickets for Talk & Tour</a></li>
+            <li><a href="helptogo.html">How to Get to St Mary’s</a></li>
+            <li><a href="maps.html">Campus Maps</a></li>
+            <li><a href="arrivalpoints.html">Arrival Points</a></li>
+            <li><a href="talktour.html">Book Tickets for Talk & Tour</a></li>
             <li><a href="accommodation.html">Accommodation</a></li>
-            <li><a href="food-drink.html">Food and Drink</a></li>
-            <li><a href="twickenham-life.html">Twickenham Life</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
+            <li><a href="fooddrink.html">Food and Drink</a></li>
+            <li><a href="life.html">Twickenham Life</a></li>
+            <li><a href="FAQs.html">FAQs</a></li>
             <li><a href="feedback.html">Open Day Feedback Survey</a></li>
         </ul>
     </nav>
