--- a/feedback.html
+++ b/feedback.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Back Button -->
     <header>
+        <button class="back-btn" onclick="window.location.href='index.html'">← Back</button>
+        <p></p>
+        <p></p>
         <h1>Thank You for Attending!</h1>
     </header>
 
@@ -25,12 +29,14 @@
             <p>
                 Please <a href="feedback-form.html">click here</a> to provide your feedback.
             </p>
+            
         </section>
     </main>
 
     <div class="floating-buttons">
         <button class="share-btn" onclick="shareOpenDay()">Share with Friends to Join Open Day</button>
         <button class="register-btn" onclick="registerOpenDay()">Register for Open Day Now</button>
+    
     </div>
 
     <footer>
