--- a/fooddrink.html
+++ b/fooddrink.html
@@ -7,15 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Back Button -->
     <header>
-        <h1>Food and Drinks Available</h1>
+        <button class="back-btn" onclick="window.location.href='index.html'">← Back</button>
     </header>
 
     <main>
         <section>
+            <h1>Food and Drinks Available</h1>
             <h2>During your visit, you can enjoy delicious food and drinks from our various on-campus cafés and dining facilities. Here’s a closer look at what we have to offer:</h2>
 
             <h3>1. Dolce Vita Café - Our On-Campus Café</h3>
+            <p></p>
+            <!-- Image for Dolce Vita Café -->
+            <img src="./assets/dolce.png" alt="Dolce Vita Café" class="restaurant-image"> <!-- Replace with your actual image path -->
             <p>
                 The Dolce Vita Café features floor-to-ceiling windows that overlook the beautiful grounds and athletics track. This stylish café serves fully sustainable, triple-certified Smokin Bean Signature Coffee and offers a delightful range of seasonal frappés, iced drinks, exclusive snacks, soft drinks, sandwiches, and hot meals.
             </p>
@@ -30,6 +35,9 @@
             </p>
 
             <h3>2. Naylor Café</h3>
+            <p></p>
+            <!-- Image for Naylor Café -->
+            <img src="./assets/naylor.png" alt="Naylor Café" class="restaurant-image"> <!-- Replace with your actual image path -->
             <p>
                 The Naylor Café is located off-campus in the Naylor Building, just a short seven-minute walk from the main campus. It proudly serves Smokin Bean Coffee, iced drinks, and a range of sandwiches, snacks, and hot meals.
             </p>
@@ -42,6 +50,9 @@
             </p>
 
             <h3>3. The Refectory - Our Largest Food Outlet</h3>
+            <p></p>
+            <!-- Image for The Refectory -->
+            <img src="./assets/refectory.png" alt="The Refectory" class="restaurant-image"> <!-- Replace with your actual image path -->
             <p>
                 The Refectory is the largest food outlet on campus, perfect for breakfast, lunch, and dinner. It is open seven days a week, offering freshly cooked meals daily alongside a wide selection of sandwiches, snacks, cold/hot drinks, and essential grocery items.
             </p>
@@ -56,7 +67,6 @@
                 Brunch: 10:30 AM - 12:30 PM<br>
                 Dinner: 4:30 PM - 6:30 PM
             </p>
-            <img src="./assets/food.png" alt="Food and Drinks" class="food-drink-image"> <!-- Replace with your actual image path -->
         </section>
     </main>
 
